# delta_robot_hybrid

./: cppbuild.txt  test.py
cpp/: CMakeLists.txt
cpp/build-debug/: debug_test
cpp/include/: calculation_result.hpp  delta_calculations.hpp  delta_constants.hpp  delta_robot_math.hpp  eigen_utils.hpp
cpp/include/geometry/: coordinate_transforms.hpp  static_geometry.hpp  workspace.hpp
cpp/include/math/: kinematics.hpp  math_orchestrator.hpp  optimization.hpp  orientation.hpp
cpp/include/utils/: timing.hpp
cpp/src/: bindings.cpp  debug_main.cpp  delta_calculations.cpp  delta_robot_math.cpp  eigen_utils.cpp
cpp/src/geometry/: coordinate_transforms.cpp  static_geometry.cpp  workspace.cpp
cpp/src/math/: kinematics.cpp  math_orchestrator.cpp  optimization.cpp  orientation.cpp
cpp/src/utils/: timing.cpp
python/: __init__.py  generator.py  math_visualizer.py  visualizer.py
